--- a/index.html
+++ b/index.html
@@ -679,11 +679,11 @@ window.addEventListener('DOMContentLoaded', function() {
      
      </script>
      
-     <script src="js/jquery.min.js"></script>
+<!--      <script src="js/jquery.min.js"></script>
      <script src="js/bootstrap.min.js"></script>
      <script src="js/js.js"></script>
      <script src="js/carouselprogressif.js"></script>
-     <script src="js/BoiteModal.js"></script>
+     <script src="js/BoiteModal.js"></script> -->
 
 </body>
 </html>
